k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-app
  namespace: calculator
  labels:
    app: calculator-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: calculator-app
  template:
    metadata:
      labels:
        app: calculator-app
    spec:
      containers:
      - name: calculator-app
        image: ilia2014a/calculator-app:latest
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30  # Даем приложению больше времени на запуск
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10  # Увеличиваем начальную задержку
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
