k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-service
  namespace: calculator
spec:
  selector:
    app: calculator-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
